# Cam-Currency-ITC-AMS

./: .env  .gitignore  CamCurrency_Postman_Collection.json  DEPLOYMENT_GUIDE.md  PROJECT_STRUCTURE.md  README.md  demo_presentation.bat  docker-compose.test.yml  docker-compose.yml  member_working.md  run_servers.bat
backend/: .env  Dockerfile  check_db.py  pyproject.toml  requirements.txt  sql_app.db
backend/app/: crud.py  database.py  detection.py  main.py  models_db.py  schemas.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: database.py  detect.py  history.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/models/: yolo.py
backend/tests/: qa_manual_tests.txt  test_security_malware.py
database/: init.sql
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
notebooks/: 01_data_verification.ipynb  02_renamed_verification.ipynb  03_model_verification.py
notebooks/dataset_export/: data.yaml  dataset_kaggle.yaml
notebooks/dataset_export/test/: labels.cache
notebooks/dataset_export/test/labels/: itc_ams_c_test_00001.txt  itc_ams_c_test_00002.txt  itc_ams_c_test_00003.txt  itc_ams_c_test_00004.txt  itc_ams_c_test_00005.txt  itc_ams_c_test_00006.txt  itc_ams_c_test_00007.txt  itc_ams_c_test_00008.txt  itc_ams_c_test_00009.txt  itc_ams_c_test_00010.txt  itc_ams_c_test_00011.txt  (+70 more)
notebooks/dataset_export/train/: labels.cache
notebooks/dataset_export/valid/: labels.cache
notebooks/models_backup/: results.csv  results_riel_master.csv
(+1966 files in other folders)
