# Professional Python Project Structure
# Generated for CamCurrency Project

[project]
name = "cam-currency-backend"
version = "1.0.0"
description = "FastAPI Backend for Khmer Riel Detection System"
authors = [
    {name = "Thy Chantha", email = "thy.chantha@student.itc.edu.kh"},
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "ultralytics>=8.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "opencv-python-headless>=4.8.0",
]
requires-python = ">=3.10"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
